<resources>
    <string name="app_name">My News</string>
    <string name="menu_main_activity_search">Search</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_drawer_sport">Sport</string>
    <string name="main_drawer_pop">Most Popular</string>
    <string name="main_drawer_top">Top Stories</string>
    <string name="my_news_category">My News</string>
    <string name="search_category">Search Article</string>
    <string name="main_drawer_search">Search Article</string>
    <string name="main_drawer_notifications">Notifications</string>

    <!-- Used in Toolbar -->
    <string name="main_menu_notifications">Notifications</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_about">About</string>


    <!-- Animation -->
    <string name="animation_main_to_search_zoom" translatable="false">AnimationMainToSearch</string>
    <string name="animation_item_recycler_view_to_web_view_zoom" translatable="false">AnimationRVToWB</string>
    <string name="animation_main_to_notification_zoom" translatable="false">AnimationMainToNotification</string>
    <string name="animation_search_to_result_zoom" translatable="false">AnimationSearchToResult</string>

    <!-- Activities Names -->
    <string name="search_articles_name_activity">Search Articles</string>
    <string name="notifications_articles_name_activity">Notifications</string>
    <string name="result_activity_name">Results</string>
    <string name="webview_activity_name">Details</string>

    <!-- CheckBoxes Names -->
    <string name="search_item_arts">Arts</string>
    <string name="search_item_business">Business</string>
    <string name="search_item_entrepreneurs">Entrepreneurs</string>
    <string name="search_item_politics">Politics</string>
    <string name="search_item_travel">Travel</string>
    <string name="search_item_sports">Sports</string>
    <string name="search_button">SEARCH</string>

    <!-- Notification Fragment text -->
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>

    <!-- Pick Date Buttons -->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!-- Search Fragment text -->
    <string name="end_date">End Date</string>
    <string name="begin_date">Begin Date</string>
    <string name="search_query_term">Search query term</string>

    <!-- Error Message UI -->
    <string name="error_message_end_date_before_begin">Has to be after begin date</string>
    <string name="error_message_query_empty">Field can\'t be empty</string>
    <string name="error_message_query_incorrect">Cannot contains special characters</string>
    <string name="error_message_no_section_selected">Select at least one section</string>
    <string name="error_message_format_date">Format has to be DD/MM/YYYY</string>
    <string name="error_message_date_in_future">Cannot be in the future</string>


    <string name="no_published_date">no date</string>

    <!-- SnackBar Message -->
    <string name="connection_failed">Connection failed, please check your Internet connection</string>
    <string name="no_news">No news to show</string>
    <string name="incorrect_url">Incorrect URL</string>
    <string name="notification_enabled_message">Notifications are enabled</string>
    <string name="notification_disabled_message">Notifications are disabled</string>
    <string name="no_more_news">No more news to show</string>
    <string name="hide_button_snackbar">Hide</string>

    <!-- Notifications Message -->
    <string name="content_notification_message">%d new news available today</string>
    <string name="title_notifications">"New news for %s"</string>
    <string name="error_notifications">Error Request</string>
    <string name="error_notification_message">An error happened during your request please reset your notification settings</string>





</resources>
