<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_activity_search"
        android:icon="@drawable/baseline_search_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/menu_main_activity_search"
        android:transitionName="@string/animation_main_to_search_zoom"/>
    <item
        android:id="@+id/menu_main_activity_notifications"
        app:showAsAction="never"
        android:title="@string/main_menu_notifications"/>
    <item
        android:id="@+id/menu_main_activity_help"
        app:showAsAction="never"
        android:title="@string/main_menu_help"/>
    <item
        android:id="@+id/menu_main_activity_about"
        android:title="@string/main_menu_about"/>
</menu>