<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_items_check_boxes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3"
    android:layout_margin="@dimen/small_margin">
    <CheckBox
        android:id="@+id/search_item_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_item_arts"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"/>
    <CheckBox
        android:id="@+id/search_item_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/search_item_business"
        android:checked="true"
        android:layout_columnWeight="1"/>
    <CheckBox
        android:id="@+id/search_item_entrepreneurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/search_item_entrepreneurs"
        android:layout_columnWeight="1"/>
    <CheckBox
        android:id="@+id/search_item_politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/search_item_politics"
        android:checked="true"
        android:layout_columnWeight="1"/>
    <CheckBox
        android:id="@+id/search_item_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="Sport"
        android:layout_columnWeight="1"/>
    <CheckBox
        android:id="@+id/search_item_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/search_item_travel"
        android:checked="true"
        android:layout_columnWeight="1"/>


</GridLayout>
