<android.support.design.widget.CoordinatorLayout
    android:id="@+id/search_view_root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/small_margin"

    android:orientation="vertical"
    tools:context="com.galou.mynews.searchNotification.SearchView">

    <include
        layout="@layout/search_query_term"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/begin_date_input_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                android:layout_margin="@dimen/small_margin">

                <EditText
                    android:id="@+id/search_fragment_start_begin_date"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:hint="@string/begin_date"
                    android:textSize="@dimen/text_date_size"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/end_date_input_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                android:layout_margin="@dimen/small_margin">

                <EditText
                    android:id="@+id/search_fragment_search_end_date"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:hint="@string/end_date"
                    android:textSize="@dimen/text_date_size" />
            </android.support.design.widget.TextInputLayout>





    </LinearLayout>

   <include
       layout="@layout/search_items_check_boxes"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:layout_margin="@dimen/small_margin"/>

    <Button
        android:id="@+id/search_fragment_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:background="@color/colorPrimary"
        android:textColor="@color/textPrimaryColor"
        android:layout_margin="@dimen/small_margin"/>


</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
